syntax = "proto3";

package ipam.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

// Device represents a network device
message Device {
  // Unique identifier
  optional string id = 1 [json_name = "id"];

  // Tenant ID for multi-tenancy
  optional uint32 tenant_id = 2 [json_name = "tenantId"];

  // Device name/hostname
  optional string name = 3 [json_name = "name"];

  // Device type
  optional DeviceType device_type = 4 [json_name = "deviceType"];

  // Description
  optional string description = 5 [json_name = "description"];

  // Manufacturer/vendor
  optional string manufacturer = 6 [json_name = "manufacturer"];

  // Model number
  optional string model = 7 [json_name = "model"];

  // Serial number
  optional string serial_number = 8 [json_name = "serialNumber"];

  // Asset tag
  optional string asset_tag = 9 [json_name = "assetTag"];

  // Location/site ID
  optional string location_id = 10 [json_name = "locationId"];

  // Rack ID
  optional string rack_id = 11 [json_name = "rackId"];

  // Rack position (U)
  optional int32 rack_position = 12 [json_name = "rackPosition"];

  // Device height in rack units (U)
  optional int32 device_height_u = 24 [json_name = "deviceHeightU"];

  // Device status
  optional DeviceStatus status = 13 [json_name = "status"];

  // Primary IP address
  optional string primary_ip = 14 [json_name = "primaryIp"];

  // Primary IPv6 address
  optional string primary_ipv6 = 15 [json_name = "primaryIpv6"];

  // Management IP (if different)
  optional string management_ip = 16 [json_name = "managementIp"];

  // Operating system
  optional string os_type = 17 [json_name = "osType"];

  // OS version
  optional string os_version = 18 [json_name = "osVersion"];

  // Firmware version
  optional string firmware_version = 19 [json_name = "firmwareVersion"];

  // Number of interfaces
  optional int32 interface_count = 20 [json_name = "interfaceCount"];

  // Number of assigned IP addresses
  optional int32 address_count = 21 [json_name = "addressCount"];

  // Contact person
  optional string contact = 22 [json_name = "contact"];

  // Custom tags (JSON)
  optional string tags = 25 [json_name = "tags"];

  // Custom metadata (JSON)
  optional string metadata = 26 [json_name = "metadata"];

  // Notes
  optional string notes = 27 [json_name = "notes"];

  // Last discovered/seen
  optional google.protobuf.Timestamp last_seen = 28 [json_name = "lastSeen"];

  // Creation timestamp
  optional google.protobuf.Timestamp created_at = 30 [json_name = "createdAt"];

  // Last update timestamp
  optional google.protobuf.Timestamp updated_at = 31 [json_name = "updatedAt"];

  // Creator user ID
  optional uint32 created_by = 32 [json_name = "createdBy"];

  // Last updater user ID
  optional uint32 updated_by = 33 [json_name = "updatedBy"];
}

enum DeviceType {
  DEVICE_TYPE_UNSPECIFIED = 0;
  DEVICE_TYPE_SERVER = 1;
  DEVICE_TYPE_VM = 2;
  DEVICE_TYPE_ROUTER = 3;
  DEVICE_TYPE_SWITCH = 4;
  DEVICE_TYPE_FIREWALL = 5;
  DEVICE_TYPE_LOAD_BALANCER = 6;
  DEVICE_TYPE_ACCESS_POINT = 7;
  DEVICE_TYPE_STORAGE = 8;
  DEVICE_TYPE_PRINTER = 9;
  DEVICE_TYPE_PHONE = 10;
  DEVICE_TYPE_WORKSTATION = 11;
  DEVICE_TYPE_CONTAINER = 12;
  DEVICE_TYPE_OTHER = 99;
}

enum DeviceStatus {
  DEVICE_STATUS_UNSPECIFIED = 0;
  DEVICE_STATUS_ACTIVE = 1;
  DEVICE_STATUS_PLANNED = 2;
  DEVICE_STATUS_STAGED = 3;
  DEVICE_STATUS_DECOMMISSIONED = 4;
  DEVICE_STATUS_OFFLINE = 5;
  DEVICE_STATUS_FAILED = 6;
}

// DeviceInterface represents a network interface on a device
message DeviceInterface {
  optional string id = 1 [json_name = "id"];
  optional string device_id = 2 [json_name = "deviceId"];
  optional string name = 3 [json_name = "name"];
  optional string mac_address = 4 [json_name = "macAddress"];
  optional string interface_type = 5 [json_name = "interfaceType"];
  optional bool enabled = 6 [json_name = "enabled"];
  optional int32 speed_mbps = 7 [json_name = "speedMbps"];
  optional string description = 8 [json_name = "description"];
  optional google.protobuf.Timestamp created_at = 10 [json_name = "createdAt"];
  optional google.protobuf.Timestamp updated_at = 11 [json_name = "updatedAt"];
}

// CreateDeviceRequest creates a new device
message CreateDeviceRequest {
  optional uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];

  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255,
    (google.api.field_behavior) = REQUIRED
  ];

  optional DeviceType device_type = 3 [json_name = "deviceType"];
  optional string description = 4 [json_name = "description"];
  optional string manufacturer = 5 [json_name = "manufacturer"];
  optional string model = 6 [json_name = "model"];
  optional string serial_number = 7 [json_name = "serialNumber"];
  optional string asset_tag = 8 [json_name = "assetTag"];
  optional string location_id = 9 [json_name = "locationId"];
  optional string rack_id = 10 [json_name = "rackId"];
  optional int32 rack_position = 11 [json_name = "rackPosition"];
  optional DeviceStatus status = 12 [json_name = "status"];
  optional string primary_ip = 13 [json_name = "primaryIp"];
  optional string management_ip = 14 [json_name = "managementIp"];
  optional string os_type = 15 [json_name = "osType"];
  optional string os_version = 16 [json_name = "osVersion"];
  optional string contact = 17 [json_name = "contact"];
  optional string tags = 18 [json_name = "tags"];
  optional string metadata = 19 [json_name = "metadata"];
  optional string notes = 20 [json_name = "notes"];
  optional int32 device_height_u = 21 [json_name = "deviceHeightU"];
}

message CreateDeviceResponse {
  Device device = 1 [json_name = "device"];
}

// GetDeviceRequest retrieves a device by ID
message GetDeviceRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetDeviceResponse {
  Device device = 1 [json_name = "device"];
}

// ListDevicesRequest lists devices with filtering
message ListDevicesRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional int32 page = 2 [json_name = "page"];
  optional int32 page_size = 3 [json_name = "pageSize"];
  optional bool no_paging = 4 [json_name = "noPaging"];
  optional string query = 5 [json_name = "query"];
  repeated string order_by = 6 [json_name = "orderBy"];
  optional string field_mask = 7 [json_name = "fieldMask"];

  // Filter by device type
  optional DeviceType device_type = 10 [json_name = "deviceType"];

  // Filter by status
  optional DeviceStatus status = 11 [json_name = "status"];

  // Filter by location
  optional string location_id = 12 [json_name = "locationId"];

  // Filter by manufacturer
  optional string manufacturer = 13 [json_name = "manufacturer"];

  // Filter by rack
  optional string rack_id = 14 [json_name = "rackId"];
}

message ListDevicesResponse {
  repeated Device items = 1 [json_name = "items"];
  optional int32 total = 2 [json_name = "total"];
}

// UpdateDeviceRequest updates a device
message UpdateDeviceRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional Device data = 2 [json_name = "data"];

  google.protobuf.FieldMask update_mask = 3 [json_name = "updateMask"];
}

message UpdateDeviceResponse {
  Device device = 1 [json_name = "device"];
}

// DeleteDeviceRequest deletes a device
message DeleteDeviceRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // Force delete even if device has IP addresses
  optional bool force = 2 [json_name = "force"];
}

// GetDeviceAddressesRequest gets IP addresses assigned to a device
message GetDeviceAddressesRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetDeviceAddressesResponse {
  repeated string address_ids = 1 [json_name = "addressIds"];
}

// GetDeviceInterfacesRequest gets interfaces of a device
message GetDeviceInterfacesRequest {
  string device_id = 1 [
    json_name = "deviceId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetDeviceInterfacesResponse {
  repeated DeviceInterface interfaces = 1 [json_name = "interfaces"];
}

// CreateDeviceInterfaceRequest creates a new interface on a device
message CreateDeviceInterfaceRequest {
  string device_id = 1 [
    json_name = "deviceId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional string mac_address = 3 [json_name = "macAddress"];
  optional string interface_type = 4 [json_name = "interfaceType"];
  optional bool enabled = 5 [json_name = "enabled"];
  optional int32 speed_mbps = 6 [json_name = "speedMbps"];
  optional string description = 7 [json_name = "description"];
}

message CreateDeviceInterfaceResponse {
  DeviceInterface interface = 1 [json_name = "interface"];
}

// DeleteDeviceInterfaceRequest deletes an interface
message DeleteDeviceInterfaceRequest {
  string device_id = 1 [
    json_name = "deviceId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  string id = 2 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

// DeviceService manages network devices
service DeviceService {
  // Create a new device
  rpc CreateDevice(CreateDeviceRequest) returns (CreateDeviceResponse) {
    option (google.api.http) = {
      post: "/v1/devices"
      body: "*"
    };
  }

  // Get a device by ID
  rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse) {
    option (google.api.http) = {
      get: "/v1/devices/{id}"
    };
  }

  // List devices with filtering
  rpc ListDevices(ListDevicesRequest) returns (ListDevicesResponse) {
    option (google.api.http) = {
      get: "/v1/devices"
    };
  }

  // Update a device
  rpc UpdateDevice(UpdateDeviceRequest) returns (UpdateDeviceResponse) {
    option (google.api.http) = {
      put: "/v1/devices/{id}"
      body: "*"
    };
  }

  // Delete a device
  rpc DeleteDevice(DeleteDeviceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/devices/{id}"
    };
  }

  // Get IP addresses assigned to a device
  rpc GetDeviceAddresses(GetDeviceAddressesRequest) returns (GetDeviceAddressesResponse) {
    option (google.api.http) = {
      get: "/v1/devices/{id}/addresses"
    };
  }

  // Get interfaces of a device
  rpc GetDeviceInterfaces(GetDeviceInterfacesRequest) returns (GetDeviceInterfacesResponse) {
    option (google.api.http) = {
      get: "/v1/devices/{device_id}/interfaces"
    };
  }

  // Create a new interface on a device
  rpc CreateDeviceInterface(CreateDeviceInterfaceRequest) returns (CreateDeviceInterfaceResponse) {
    option (google.api.http) = {
      post: "/v1/devices/{device_id}/interfaces"
      body: "*"
    };
  }

  // Delete an interface
  rpc DeleteDeviceInterface(DeleteDeviceInterfaceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/devices/{device_id}/interfaces/{id}"
    };
  }
}
